[gd_scene load_steps=4 format=2]

[ext_resource path="res://UIMain/Map/map.jpg" type="Texture2D" id=1]
[ext_resource path="res://UIMain/Map/Map.gd" type="Script" id=2]
[ext_resource path="res://UIMain/Map/PaintLayer.gd" type="Script" id=3]

[node name="Map" type="Control"]
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapTexture" type="TextureRect" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaintLayer" type="Control" parent="."]
offset_right = 1000.0
offset_bottom = 1000.0
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_down" from="PaintLayer" to="." method="_on_PaintLayer_mouse_down"]
